--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container1"></div>
 <img src="Gambar1.jpg" alt="" width="200cm" height="200cm">
 <p>&nbsp;<h2  align="center">&nbsp;Sistem Basis Data</h2></p>
-<p align="center"><a href="Sistembasisdata.html">Masuk</a></p>
+<p align="center"><a href="https://fiznwahid.github.io/SistemBasisData/">Masuk</a></p>
 <br><br><br>
 <div class="kotak2"></div>
 <img src="Gambar2.png" alt="" width="200cm" height="200cm">
